Fixed css alignment

--- a/main.css
+++ b/main.css
@@ -83,7 +83,7 @@ button {
     background-color: #007bff;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
 }
 
@@ -92,12 +92,12 @@ button:hover {
 }
 
 .imagegallery{
-display:flex; 
+display:flex;
+justify-content: center;
 }
 
 .box{
-width:25%;
-height:25%;
+width:22%;
 text-align:center;
 padding:10px 10px;
 margin:0px 5px;
@@ -105,32 +105,29 @@ transition: transform .2s;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 box-sizing: border-box;
 border-radius: 20px;
-height: 800px;
+height: 520px;
 }
 
 .box h3{
 color:#2F94A8;
-padding:60px 0 25px;
-font-size:23px;
-letter-spacing:3px;
+font-size:20px;
+padding: 10px;
 
 }
 
 .box p{
-word-spacing:2px;
-font-size:20px;
-padding:30px 15px 15px;
+font-size:16px;
 line-height:30px;
 
 }
 
 .box img{
-height: 400px;
+height: 300px;
 }
 
 .box:hover{
-transform: scale(1.2);
-background-color: rgba(109, 209, 177, 0.758);
+transform: scale(1.1);
+background-color: white;
 }
 
 .contact{
